[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-diann"
version = "0.1.1"
description = "CPP DIANN Streamlit App"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"}
]
dependencies = [
"streamlit",
"pandas",
"plotly",
"numpy",
"requests",
"fastaframes==1.2.2",
"peptacular==2.5.0",
"scipy",
]

[project.scripts]
cpp-diann = "cpp_diann.run:run_app"

[tool.setuptools]
packages = ["cpp_diann"]
package-dir = {"" = "src"}
